--- a/.gitignore
+++ b/.gitignore
@@ -1,18 +1,3 @@
-# dependencies
-/node_modules
-/.pnp
-.pnp.js
-# testing
-/coverage
-# production
-/build
-# misc
-.DS_Store
-.env.local
-.env.development.local
-.env.test.local
-.env.production.local
-
 # Logs
 logs
 *.log
@@ -20,3 +5,17 @@ npm-debug.log*
 yarn-debug.log*
 yarn-error.log*
 firebase-debug.log*
+
+# Compiled binary
+/build
+
+# Dependencies
+/node_modules
+
+# misc
+.DS_Store
+.env.local
+.env.development.local
+.env.test.local
+.env.production.local
+
