--- a/package.json
+++ b/package.json
@@ -38,6 +38,7 @@
     "prop-types": "^15.8.1",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
-    "react-router-dom": "^6.3.0"
+    "react-router-dom": "^6.3.0",
+    "react-svg-sprite": "^1.0.8"
   }
 }
