--- a/package.json
+++ b/package.json
@@ -34,6 +34,7 @@
     "webpack-serve": "^4.0.0"
   },
   "dependencies": {
+    "@reduxjs/toolkit": "^1.8.4",
     "classnames": "^2.3.1",
     "prop-types": "^15.8.1",
     "react": "^18.2.0",
