--- a/.eslintrc
+++ b/.eslintrc
@@ -21,7 +21,7 @@
     "react/jsx-filename-extension": [
       1,
       {
-        "extensions": [".js"]
+        "extensions": [".js", ".jsx"]
       }
     ],
     "react/function-component-definition": [
