--- a/package.json
+++ b/package.json
@@ -36,6 +36,7 @@
   "dependencies": {
     "@reduxjs/toolkit": "^1.8.4",
     "classnames": "^2.3.1",
+    "firebase": "^9.9.3",
     "prop-types": "^15.8.1",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
