--- a/package.json
+++ b/package.json
@@ -42,6 +42,7 @@
     "react-dom": "^18.2.0",
     "react-redux": "^8.0.2",
     "react-router-dom": "^6.3.0",
-    "react-svg-sprite": "^1.0.8"
+    "react-svg-sprite": "^1.0.8",
+    "redux-logger": "^3.0.6"
   }
 }
