--- a/package.json
+++ b/package.json
@@ -37,6 +37,7 @@
     "@reduxjs/toolkit": "^1.8.4",
     "classnames": "^2.3.1",
     "firebase": "^9.9.3",
+    "lodash": "^4.17.21",
     "prop-types": "^15.8.1",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
