--- a/package.json
+++ b/package.json
@@ -5,7 +5,9 @@
   "main": "index.js",
   "scripts": {
     "build": "webpack --mode development",
-    "start": "webpack serve --mode development"
+    "dev": "webpack serve --mode development",
+    "server": "json-server --watch -p 3001 db.json --routes routes.json",
+    "start": "concurrently \"yarn dev\" \"yarn server\""
   },
   "author": "",
   "license": "ISC",
@@ -16,6 +18,7 @@
     "@babel/preset-env": "^7.18.6",
     "@babel/preset-react": "^7.18.6",
     "babel-loader": "^8.2.5",
+    "concurrently": "^7.3.0",
     "css-loader": "^6.7.1",
     "eslint": "^8.18.0",
     "eslint-config-airbnb": "^19.0.4",
@@ -25,6 +28,7 @@
     "eslint-plugin-jsx-a11y": "^6.6.0",
     "eslint-plugin-react": "^7.30.1",
     "html-webpack-plugin": "^5.5.0",
+    "json-server": "^0.17.0",
     "sass": "^1.53.0",
     "sass-loader": "^13.0.2",
     "style-loader": "^3.3.1",
