--- a/package.json
+++ b/package.json
@@ -31,12 +31,13 @@
     "eslint-plugin-jsx-a11y": "^6.6.0",
     "eslint-plugin-react": "^7.30.1",
     "html-webpack-plugin": "^5.5.0",
+    "jest": "^29.3.1",
     "json-server": "^0.17.0",
     "sass": "^1.53.0",
     "sass-loader": "^13.0.2",
     "style-loader": "^3.3.1",
     "webpack": "^5.75.0",
-    "webpack-cli": "^4.10.0",
+    "webpack-cli": "^5.0.0",
     "webpack-dev-server": "^4.9.3",
     "webpack-serve": "^4.0.0"
   },
