--- a/.eslintrc
+++ b/.eslintrc
@@ -1,6 +1,6 @@
 {
   "extends": ["airbnb", "eslint-config-prettier"],
-  "plugins": ["babel"],
+  "plugins": ["babel", "jest"],
   "parserOptions": {
     "ecmaVersion": 12,
     "parser": "@babel/eslint-parser",
@@ -8,7 +8,8 @@
     "sourceType": "module"
   },
   "env": {
-    "browser": true
+    "browser": true,
+    "jest/globals": true
   },
   "rules": {
     "no-unused-vars": "warn",
