--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "server": "json-server db.json",
     "start": "concurrently \"yarn dev\" \"yarn server\"",
     "lint": "eslint --ignore-path .gitignore --ext .js,jsx",
+    "test": "jest",
     "validate": "npm run lint && npm run build"
   },
   "author": "",
@@ -19,7 +20,8 @@
     "@babel/eslint-parser": "^7.18.2",
     "@babel/preset-env": "^7.18.6",
     "@babel/preset-react": "^7.18.6",
-    "babel-loader": "^8.3.0",
+    "babel-jest": "^29.3.1",
+    "babel-loader": "^9.1.0",
     "concurrently": "^7.3.0",
     "css-loader": "^6.7.1",
     "eslint": "^8.18.0",
@@ -28,10 +30,12 @@
     "eslint-import-resolver-webpack": "^0.13.2",
     "eslint-plugin-babel": "^5.3.1",
     "eslint-plugin-import": "^2.26.0",
+    "eslint-plugin-jest": "^27.1.5",
     "eslint-plugin-jsx-a11y": "^6.6.0",
     "eslint-plugin-react": "^7.30.1",
     "html-webpack-plugin": "^5.5.0",
     "jest": "^29.3.1",
+    "jest-environment-jsdom": "^29.3.1",
     "json-server": "^0.17.0",
     "sass": "^1.53.0",
     "sass-loader": "^13.0.2",
