--- a/.eslintrc
+++ b/.eslintrc
@@ -13,6 +13,12 @@
   },
   "rules": {
     "no-unused-vars": "warn",
+    "no-use-before-define": [
+      "error",
+      {
+        "functions": false
+      }
+    ],
     "import/extensions": [
       "error",
       "ignorePackages",
