--- a/package.json
+++ b/package.json
@@ -47,6 +47,7 @@
   },
   "dependencies": {
     "@reduxjs/toolkit": "^1.8.4",
+    "axios": "^1.3.4",
     "classnames": "^2.3.1",
     "firebase": "^9.9.3",
     "lodash": "^4.17.21",
