--- a/package.json
+++ b/package.json
@@ -8,7 +8,7 @@
     "dev": "webpack serve --mode development",
     "server": "json-server db.json",
     "start": "concurrently \"yarn dev\" \"yarn server\"",
-    "lint": "eslint --ignore-path .gitignore --ext .js,jsx",
+    "lint": "eslint --ignore-path .gitignore --ext .js,jsx,ts,tsx",
     "test": "jest",
     "validate": "npm run lint && npm run build"
   },
@@ -20,6 +20,12 @@
     "@babel/eslint-parser": "^7.18.2",
     "@babel/preset-env": "^7.18.6",
     "@babel/preset-react": "^7.18.6",
+    "@babel/preset-typescript": "^7.21.0",
+    "@types/jest": "^29.5.0",
+    "@types/lodash": "^4.14.191",
+    "@types/node": "^18.15.5",
+    "@types/react": "^18.0.28",
+    "@types/react-dom": "^18.0.11",
     "babel-jest": "^29.3.1",
     "babel-loader": "^9.1.0",
     "concurrently": "^7.3.0",
@@ -27,6 +33,7 @@
     "eslint": "^8.18.0",
     "eslint-config-airbnb": "^19.0.4",
     "eslint-config-prettier": "^8.5.0",
+    "eslint-config-standard-with-typescript": "^34.0.1",
     "eslint-import-resolver-webpack": "^0.13.2",
     "eslint-plugin-babel": "^5.3.1",
     "eslint-plugin-import": "^2.26.0",
@@ -40,6 +47,7 @@
     "sass": "^1.53.0",
     "sass-loader": "^13.0.2",
     "style-loader": "^3.3.1",
+    "typescript": "^5.0.2",
     "webpack": "^5.75.0",
     "webpack-cli": "^5.0.0",
     "webpack-dev-server": "^4.9.3",
