--- a/package.json
+++ b/package.json
@@ -30,6 +30,7 @@
     "babel-loader": "^9.1.0",
     "concurrently": "^7.3.0",
     "css-loader": "^6.7.1",
+    "dotenv": "^16.0.3",
     "eslint": "^8.18.0",
     "eslint-config-airbnb": "^19.0.4",
     "eslint-config-prettier": "^8.5.0",
