--- a/jsconfig.json
+++ b/jsconfig.json
@@ -9,7 +9,7 @@
       "components/*": ["components/*"],
       "styles/*": ["styles/*"],
       "svg/*": ["svg/*"],
-      "helpers/*": ["helpers/*"]
+      "helpers/*": ["utils/helpers/*"]
     }
   }
 }
