--- a/jsconfig.json
+++ b/jsconfig.json
@@ -9,7 +9,8 @@
       "components/*": ["components/*"],
       "styles/*": ["styles/*"],
       "svg/*": ["svg/*"],
-      "helpers/*": ["utils/helpers/*"]
+      "helpers/*": ["utils/helpers/*"],
+      "errors/*": ["utils/errors/*"]
     }
   }
 }
