--- a/tsconfig.json
+++ b/tsconfig.json
@@ -24,7 +24,8 @@
       "components/*": ["components/*"],
       "styles/*": ["styles/*"],
       "svg/*": ["svg/*"],
-      "helpers/*": ["utils/helpers/*"]
+      "helpers/*": ["utils/helpers/*"],
+      "errors/*": ["utils/errors/*"]
     }
   },
   "include": ["src"]
