--- a/package.json
+++ b/package.json
@@ -59,6 +59,7 @@
     "axios": "^1.3.4",
     "classnames": "^2.3.1",
     "firebase": "^9.9.3",
+    "jose": "^4.14.0",
     "lodash": "^4.17.21",
     "prop-types": "^15.8.1",
     "react": "^18.2.0",
