--- a/package.json
+++ b/package.json
@@ -9,7 +9,7 @@
     "server": "json-server db.json",
     "start": "concurrently \"yarn dev\" \"yarn server\"",
     "lint": "eslint --ignore-path .gitignore --ext .js,jsx,ts,tsx",
-    "test": "jest",
+    "test": "jest --watch",
     "validate": "npm run lint && npm run build"
   },
   "author": "",
@@ -21,7 +21,9 @@
     "@babel/preset-env": "^7.18.6",
     "@babel/preset-react": "^7.18.6",
     "@babel/preset-typescript": "^7.21.0",
-    "@types/jest": "^29.5.0",
+    "@testing-library/react": "^14.0.0",
+    "@testing-library/user-event": "^14.4.3",
+    "@types/jest": "^29.5.3",
     "@types/lodash": "^4.14.191",
     "@types/node": "^18.15.5",
     "@types/react": "^18.0.28",
@@ -43,11 +45,12 @@
     "eslint-plugin-react": "^7.30.1",
     "html-webpack-plugin": "^5.5.0",
     "jest": "^29.3.1",
-    "jest-environment-jsdom": "^29.3.1",
+    "jest-environment-jsdom": "^29.6.1",
     "json-server": "^0.17.0",
     "sass": "^1.53.0",
     "sass-loader": "^13.0.2",
     "style-loader": "^3.3.1",
+    "ts-jest": "^29.1.1",
     "typescript": "^5.0.2",
     "webpack": "^5.75.0",
     "webpack-cli": "^5.0.0",
