--- a/package.json
+++ b/package.json
@@ -10,7 +10,9 @@
     "start": "concurrently \"yarn dev\" \"yarn server\"",
     "lint": "eslint --ignore-path .gitignore --ext .js,jsx,ts,tsx",
     "test": "jest --watch",
-    "validate": "npm run lint && npm run build"
+    "validate": "npm run lint && npm run build",
+    "storybook": "storybook dev -p 6006",
+    "build-storybook": "storybook build"
   },
   "author": "",
   "license": "ISC",
@@ -21,6 +23,15 @@
     "@babel/preset-env": "^7.18.6",
     "@babel/preset-react": "^7.18.6",
     "@babel/preset-typescript": "^7.21.0",
+    "@chromatic-com/storybook": "^3.2.2",
+    "@storybook/addon-essentials": "^8.4.7",
+    "@storybook/addon-interactions": "^8.4.7",
+    "@storybook/addon-onboarding": "^8.4.7",
+    "@storybook/addon-webpack5-compiler-swc": "^1.0.5",
+    "@storybook/blocks": "^8.4.7",
+    "@storybook/react": "^8.4.7",
+    "@storybook/react-webpack5": "^8.4.7",
+    "@storybook/test": "^8.4.7",
     "@testing-library/jest-dom": "^5.17.0",
     "@testing-library/react": "^14.0.0",
     "@testing-library/user-event": "^14.4.3",
@@ -44,12 +55,14 @@
     "eslint-plugin-jest": "^27.1.5",
     "eslint-plugin-jsx-a11y": "^6.6.0",
     "eslint-plugin-react": "^7.30.1",
+    "eslint-plugin-storybook": "^0.11.1",
     "html-webpack-plugin": "^5.5.0",
     "jest": "^29.3.1",
     "jest-environment-jsdom": "^29.6.1",
     "json-server": "^0.17.0",
     "sass": "^1.53.0",
     "sass-loader": "^13.0.2",
+    "storybook": "^8.4.7",
     "style-loader": "^3.3.1",
     "ts-jest": "^29.1.1",
     "typescript": "^5.0.2",
@@ -72,5 +85,10 @@
     "react-router-dom": "^6.3.0",
     "react-svg-sprite": "^1.0.8",
     "redux-logger": "^3.0.6"
+  },
+  "eslintConfig": {
+    "extends": [
+      "plugin:storybook/recommended"
+    ]
   }
 }
